# basicstation

./: .travis.yml  CMakeLists.txt
cmake/: openwrt-toolchain-rpi.cmake
cmake/Modules/: Findubus.cmake
src/: aio.c  lgwsim.c  ral_lgw.c  sx130xconf.c  sx130xconf.h
src-linux/: ral_slave.c  sys_linux.c  ubus.c  ubus.h
